# ticket_recognition_jcpp

./: .gitignore  CMakeLists.txt
cmake/: FindTicket_Recognition.cmake
libs/ticket_recognition/: TicketRecognitionConfig.cmake  TicketRecognitionTargets.cmake
libs/ticket_recognition/include/: cti.hpp
libs/ticket_recognition/lib/: ticket_recognition_lib.lib
libs/ticket_recognition/linux/: TicketRecognitionConfig.cmake  TicketRecognitionTargets.cmake
libs/ticket_recognition/linux/include/: metadata.hpp  point.hpp  text.hpp  ticket.hpp  ticket_image.hpp
libs/ticket_recognition/windows/: TicketRecognitionConfig.cmake  TicketRecognitionTargets.cmake
libs/ticket_recognition/windows/include/: bounding_box.hpp  matcher.hpp  metadata_reader.hpp  ticket_match.hpp
libs/ticket_recognition/windows/lib/: ticket_recognition_lib.lib
linux-build/: Dockerfile  docker-compose.yml  install.sh
src/: CMakeLists.txt
src/cti/: CMakeLists.txt  com_bfh_ticket_Cti.cpp  com_bfh_ticket_Matcher.cpp  com_bfh_ticket_Metadata.cpp  com_bfh_ticket_MetadataReader.cpp  com_bfh_ticket_Ticket.cpp  com_bfh_ticket_TicketMatch.cpp  helper.cpp  helper.hpp
src/include/: CMakeLists.txt  com_bfh_ticket_Cti.h  com_bfh_ticket_Matcher.h  com_bfh_ticket_Metadata.h  com_bfh_ticket_MetadataReader.h  com_bfh_ticket_Ticket.h  com_bfh_ticket_TicketMatch.h
